--- a/_posts/2019-08-13-1.md
+++ b/_posts/2019-08-13-1.md
@@ -3,19 +3,20 @@ layout: post
 title: '#1 Architektura vs Agile'
 date: 2019-08-13 00:00:00 +0300
 description: 
-img: logo.png
+img: 1.png
 tags: 
 ---
-Opis To Do
+Odcinek poświęcony robieniu architektura w czasach Agile.  Czy można w ogóle robić dobrą architekturę, kiedy wszystko jest niby zwinne?
 
-Linki:
+Ciekawe linki i inne znaleziska z tego odcinka:
 
 - [Człowiek vs Komputer](https://ksiegarnia.pwn.pl/Czlowiek-vs-Komputer,789360194,p.html)
 - [10x engineers](https://twitter.com/skirani/status/1149302828420067328)
+- [What is a 1x Engineer?](https://1x.engineer/)
 - [It's 2019, and one third of businesses still have active Windows XP deployments](https://www.techrepublic.com/article/its-2019-and-one-third-of-businesses-still-have-active-windows-xp-deployments/)
 - [Automating chaos experiments in production](https://blog.acolyer.org/2019/07/05/automating-chaos-experiments-in-production/)
 - [10 tips for reviewing code you don’t like](https://developers.redhat.com/blog/2019/07/08/10-tips-for-reviewing-code-you-dont-like/)
 
-Podcast można słuchać na:
+Odcinek znajdziesz na:
 
-To Do
+<iframe src="https://anchor.fm/patoarchitekciio/embed/episodes/1-Architektura-vs-Agile-e4v42i" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
