--- a/_posts/2019-08-13-1.md
+++ b/_posts/2019-08-13-1.md
@@ -19,4 +19,6 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 Odcinek znajdziesz na:
 
-<iframe src="https://anchor.fm/patoarchitekciio/embed/episodes/1-Architektura-vs-Agile-e4v42i" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+- [anchor.fm](https://anchor.fm/patoarchitekciio/episodes/1-Architektura-vs-Agile-e4v42i/a-aksl45)
+- [Spotify](https://open.spotify.com/episode/6daeXbyjWuvl3oSFFhpcfE)
+- [YouTube](https://www.youtube.com/watch?v=GGFjvaiQh9E)
