6 odcinek - link do youtube

--- a/_posts/2019-09-20-6.md
+++ b/_posts/2019-09-20-6.md
@@ -18,7 +18,7 @@ Odcinek znajdziesz na:
 - [Apple Podcasts]()
 - [anchor.fm]()
 - [Spotify]()
-- [YouTube](https://www.youtube.com/watch?v=X3qKN8EX1Dc)
+- [YouTube](https://youtu.be/tjn4ESQ4xCU)
 - [Pocket Casts](https://pca.st/16k1)
 - [Google Podcasts]()
 - [RadioPublic]()
