--- a/_posts/2019-09-20-6.md
+++ b/_posts/2019-09-20-6.md
@@ -15,11 +15,11 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 Odcinek znajdziesz na:
 
-- [Apple Podcasts]()
-- [anchor.fm]()
-- [Spotify]()
+- [Apple Podcasts](https://podcasts.apple.com/pl/podcast/circuit-breaker/id1477067604?i=1000450452451&l=pl)
+- [anchor.fm](https://anchor.fm/patoarchitekciio/episodes/Circuit-breaker-e5eo55t)
+- [Spotify](https://open.spotify.com/episode/6JYghXXyGT3ZG1Pj6cz7o7)
 - [YouTube](https://youtu.be/tjn4ESQ4xCU)
 - [Pocket Casts](https://pca.st/16k1)
-- [Google Podcasts]()
-- [RadioPublic]()
-- [Overcast]()
+- [Google Podcasts](https://podcasts.google.com/?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy84NzIwMTBjL3BvZGNhc3QvcnNz&episode=NjE1OThmMjMtMGJmNy1iZDhiLWNlODUtOTI2NmFhZGE3M2Vl)
+- [RadioPublic](https://radiopublic.com/patoarchitekci-6BJROa/ep/s1!50a74)
+- [Overcast](https://overcast.fm/+TnuaRXZPo)
