#7 - linki do odcinka

--- a/_posts/2019-09-27-7.md
+++ b/_posts/2019-09-27-7.md
@@ -26,11 +26,11 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 Odcinek znajdziesz na:
 
-- [Apple Podcasts]()
-- [anchor.fm]()
-- [Spotify]()
+- [Apple Podcasts](https://podcasts.apple.com/pl/podcast/azure-storage-blob-po-raz-pierwszy/id1477067604?i=1000451405032&l=pl)
+- [anchor.fm](https://anchor.fm/patoarchitekciio/episodes/Azure-Storage---Blob-po-raz-pierwszy-e5j3c8)
+- [Spotify](https://open.spotify.com/episode/1XR8W810qBcovmpCtALqQt)
 - [YouTube](https://youtu.be/tjn4ESQ4xCU)
 - [Pocket Casts](https://pca.st/16k1)
-- [Google Podcasts]()
-- [RadioPublic]()
-- [Overcast]()
+- [Google Podcasts](https://podcasts.google.com/?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy84NzIwMTBjL3BvZGNhc3QvcnNz&episode=ZGRjYjg0YTMtYjZiMi02MTZjLWQ2YzQtNDQ5MmJiODY3Yjg5)
+- [RadioPublic](https://radiopublic.com/patoarchitekci-6BJROa/ep/s1!ff63c)
+- [Overcast](https://overcast.fm/+TnuaD5g5M)
