--- a/_posts/2019-10-11-9.md
+++ b/_posts/2019-10-11-9.md
@@ -16,8 +16,8 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 Odcinek znajdziesz na:
 
-- [Apple Podcasts]()
-- [anchor.fm]()
-- [Spotify]()
+- [Apple Podcasts](https://podcasts.apple.com/pl/podcast/azure-storage-table/id1477067604?i=1000453100137&l=pl)
+- [anchor.fm](https://anchor.fm/patoarchitekciio/episodes/Azure-Storage---Table-e6fkq1)
+- [Spotify](https://open.spotify.com/episode/2tq5D4pmxSHPLoBsBw0UmA)
 - [YouTube](https://youtu.be/kT5FgZw-kNI)
-- [Google Podcasts]()
+- [Google Podcasts](https://podcasts.google.com/?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy84NzIwMTBjL3BvZGNhc3QvcnNz&episode=NGI4ZDg4OGYtNGVhYy0wMzg4LTdiNTItNzg1YmUxNWU1YzA4)
