--- a/_posts/2019-11-15-14.md
+++ b/_posts/2019-11-15-14.md
@@ -16,6 +16,8 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 - [Eisenhower Box](https://jamesclear.com/eisenhower-box)
 - [Zasada Pareta](https://pl.wikipedia.org/wiki/Zasada_Pareta)
 - [Vilfredo Pareto](https://pl.wikipedia.org/wiki/Vilfredo_Pareto)
+- [EventStorming](https://www.eventstorming.com/)
+- [Event storming – jak szybko odkrywać nieznane?](https://radekmaziarka.pl/2018/12/06/event-storming-jak-szybko-odkrywac-nieznane/)
 - [Metoda MoSCoW](https://pl.wikipedia.org/wiki/Metoda_MoSCoW)
 - [Technika MoSCoW](https://mfiles.pl/pl/index.php/Technika_MoSCoW)
 - [Moscow – czyli jak nadać znaczenie wymaganiom w projekcie](https://zarzadzam-projektami.pl/2017/07/14/921/)
@@ -25,4 +27,3 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 Odcinek znajdziesz na:
 
 - [YouTube](https://youtu.be/C3BEEd8jC9o)
-
