#15 Technology Radar vol. 21 Review

--- a/_posts/2019-12-06-15.md
+++ b/_posts/2019-12-06-15.md
@@ -13,6 +13,9 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 - [Technology Radar](https://www.thoughtworks.com/radar)
 - [Technology Radar vol. 21](https://assets.thoughtworks.com/assets/technology-radar-vol-21-en.pdf)
 - [Amazon CodeGuru (Preview)](https://aws.amazon.com/codeguru/)
+- [The biggest Flutter Conference in Europe!](https://fluttereurope.dev/)
+- [Testing Microservices: an Overview of 12 Useful Techniques - Part 1](https://www.infoq.com/articles/twelve-testing-techniques-microservices-intro/)
+- [Enterprise Integration Patterns](https://www.enterpriseintegrationpatterns.com/)
 - [AWS announces Amazon CodeGuru for automated code reviews and application performance recommendations](https://aws.amazon.com/about-aws/whats-new/2019/12/aws-announces-amazon-codeguru-for-automated-code-reviews-and-application-performance-recommendations/)
 
 Odcinek znajdziesz na:
