--- a/_posts/2019-12-13-16.md
+++ b/_posts/2019-12-13-16.md
@@ -30,3 +30,5 @@ Odcinek znajdziesz na:
 
 - [YouTube](https://www.youtube.com/watch?v=gAJmS581ZCc)
 - [anchor.fm](https://anchor.fm/patoarchitekciio/episodes/Ksiki-1-e9h6g0)
+- [Spotify](https://open.spotify.com/episode/7h2TUugtIZSyQfxR6Smjq5)
+- [Google Podcasts](https://podcasts.google.com/?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy84NzIwMTBjL3BvZGNhc3QvcnNz&episode=MzZkMWUxMzgtYzYyZS1mOTZjLWQyYjktNjQ2OTAxNjQ5OWRm)
