Linki do API Gateway

--- a/_posts/2020-01-03-18.md
+++ b/_posts/2020-01-03-18.md
@@ -19,6 +19,14 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 - [Performance testing HTTP/1.1 vs HTTP/2 vs HTTP/2 + Server Push for REST APIs](https://evertpot.com/h2-parallelism/)
 - [Beyond Microservices: Streams, State and Scalability](https://www.infoq.com/presentations/microservices-streams-state-scalability)
+- [Google (Apigee)](https://cloud.google.com/apigee/)
+- [Azure API API Management](https://azure.microsoft.com/en-us/services/api-management/)
+- [API Management Module for NGINX Controller](https://www.nginx.com/products/nginx-controller/api-management/)
+- [Kong Gateway](https://konghq.com/kong/)
+- [Ambassador](https://www.getambassador.io/)
+- [Microservices API Gateways vs. Traditional Enterprise API Gateways](https://www.getambassador.io/about/microservices-api-gateways/)
+- [Spring Cloud Gateway](https://spring.io/projects/spring-cloud-gateway)
+- [Ocelot](https://github.com/ThreeMammals/Ocelot)
 
 Odcinek znajdziesz na:
 
