--- a/_posts/2020-01-11-19.md
+++ b/_posts/2020-01-11-19.md
@@ -15,6 +15,7 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 - [Kubernetes in Action ](https://www.manning.com/books/kubernetes-in-action)
 - [Kubernetes: Up and Running, Second Edition](https://azure.microsoft.com/pl-pl/resources/kubernetes-up-and-running/)
 - [A decade in review in tech](https://medium.com/@copyconstruct/a-decade-in-review-in-tech-1cde76c9b43c)
+- [This Is My 10-Year-Plan. What’s yours? - Mark Rendle](https://vimeo.com/207272498)
 - [thoughtworks - Overambitious API gateways](https://www.thoughtworks.com/radar/platforms/overambitious-api-gateways)
 - [Overambitious API gateways](https://sookocheff.com/post/api/overambitious-api-gateways/)
 - [BFF @ SoundCloud](https://www.thoughtworks.com/insights/blog/bff-soundcloud)
