apple podcast dla #21

--- a/_posts/2020-01-31-21.md
+++ b/_posts/2020-01-31-21.md
@@ -282,7 +282,7 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 Odcinek znajdziesz na:
 
-- [Apple Podcasts](https://podcasts.apple.com/us/podcast/patoarchitekci/id1477067604?ign-mpt=uo%3D4)
+- [Apple Podcasts](https://podcasts.apple.com/us/podcast/observability-metryki/id1477067604?i=1000464217231)
 - [YouTube](https://www.youtube.com/watch?v=AzsqcMemUiA)
 - [anchor.fm](https://anchor.fm/patoarchitekciio/episodes/Observability---Metryki-eai7sr)
 - [Spotify](https://open.spotify.com/episode/1LvqfuG4S2ChhayWAi2FVg)
