--- a/_posts/2020-01-17-20.md
+++ b/_posts/2020-01-17-20.md
@@ -5,6 +5,7 @@ date: 2020-01-17 08:00:00 +0200
 description: 
 img: 20.png
 tags: 
+spreaker: 22177734
 ---
 Od jakiegoś czasu Observability staje się widocznym trendem. W tym odcinku rozmawiamy o jednym z filarów Observability – logach!
 
