Dodanie id playera

--- a/_posts/2019-08-13-1.md
+++ b/_posts/2019-08-13-1.md
@@ -5,6 +5,7 @@ date: 2019-08-13 00:00:00 +0300
 description: 
 img: 1.png
 tags: 
+spreaker: 22582604
 ---
 Odcinek poświęcony robieniu architektura w czasach Agile.  Czy można w ogóle robić dobrą architekturę, kiedy wszystko jest niby zwinne?
 
