--- a/_posts/2019-08-30-3.md
+++ b/_posts/2019-08-30-3.md
@@ -5,6 +5,7 @@ date: 2019-08-30 08:00:00 +0200
 description: 
 img: 3.png
 tags: 
+spreaker: 22177745
 ---
 Mięso od 16:24, za bardzo się rozgadaliśmy na wstęp! ;-)
 
