--- a/_posts/2019-09-13-5.md
+++ b/_posts/2019-09-13-5.md
@@ -5,6 +5,7 @@ date: 2019-09-06 08:00:00 +0200
 description: 
 img: 5.png
 tags: 
+spreaker: 22582602
 ---
 Cześć druga o Technology Radar oraz trochę o roli architekta. Jeśli nie słuchałeś poprzedniego odcinka, to warto to zrobić.
 
