--- a/_posts/2019-09-27-7.md
+++ b/_posts/2019-09-27-7.md
@@ -5,6 +5,7 @@ date: 2019-09-27 08:00:00 +0200
 description: 
 img: 7.png
 tags: 
+spreaker: 22177702
 ---
 Azure Storage - Blob po raz pierwszy. Czemu po raz pierwszy? Miał być prosty odcinek o cały Azure Storage.
 
