--- a/_posts/2019-10-18-10.md
+++ b/_posts/2019-10-18-10.md
@@ -5,6 +5,7 @@ date: 2019-10-18 08:00:00 +0200
 description: 
 img: 10.png
 tags: 
+spreaker: 22582600
 ---
 Service Mesh hype? Czy coś potrzebnego? Dziś rozmawiamy o tym, co dają Service Meshe.
 
