--- a/_posts/2019-10-25-11.md
+++ b/_posts/2019-10-25-11.md
@@ -5,6 +5,7 @@ date: 2019-10-25 08:00:00 +0200
 description: 
 img: 11.png
 tags: 
+spreaker: 22582599
 ---
 Azure Storage Queue i ostatni raz ogólnie o Azure Storage.
 
