--- a/_posts/2019-12-13-16.md
+++ b/_posts/2019-12-13-16.md
@@ -5,6 +5,7 @@ date: 2019-12-14 08:00:00 +0200
 description: 
 img: 16.png
 tags: 
+spreaker: 22582596
 ---
 Zestawienie 6 książek, które czytaliśmy ostatnio i według nas warto przeczytać.
 
