--- a/_posts/2020-01-11-19.md
+++ b/_posts/2020-01-11-19.md
@@ -6,6 +6,7 @@ mp3: https://anchor.fm/s/872010c/podcast/play/9629715/https%3A%2F%2Fd3ctxlq1ktw2
 description: 
 img: 19.png
 tags: 
+spreaker: 22177736
 ---
 Kolejny odcinek z API Gateway. Tym razem poruszamy jedno z zastosowań, jakim jest BFF, API Aggregation oraz jak wypada przy tym GraphQL.
 
