--- a/_posts/2019-08-23-2.md
+++ b/_posts/2019-08-23-2.md
@@ -5,6 +5,7 @@ date: 2019-08-23 08:00:00 +0200
 description: 
 img: 2.png
 tags: 
+spreaker: 22582603
 ---
 W tym odcinku nasza luźna rozmowa o tym jak jest z Serverless z różnych stron – tych dobrych jak i tych gorszych!
 
