--- a/_posts/2019-09-06-4.md
+++ b/_posts/2019-09-06-4.md
@@ -5,6 +5,7 @@ date: 2019-09-06 08:00:00 +0200
 description: 
 img: 4.png
 tags: 
+spreaker: 22177704
 ---
 Czym jest Technology Radar? Co to jest ThoughtWorks? Kto tam pracuje i czy go lubimy? Na te i inne pytania znajdziesz odpowiedź w tym odcinku.
 
