--- a/_posts/2019-09-20-6.md
+++ b/_posts/2019-09-20-6.md
@@ -5,6 +5,7 @@ date: 2019-09-20 08:00:00 +0200
 description: 
 img: 6.png
 tags: 
+spreaker: 22177744
 ---
 Circuit breaker, czyli co ma wyłącznik prądowy do architektury!?
 
