--- a/_posts/2019-10-04-8.md
+++ b/_posts/2019-10-04-8.md
@@ -5,6 +5,7 @@ date: 2019-10-04 08:00:00 +0200
 description: 
 img: 8.png
 tags: 
+spreaker: 22582601
 ---
 Odcinek anegdotyczny, czyli po prostu o tytułowych f**k-upch - naszych i innych osób.
 
