--- a/_posts/2019-11-01-12.md
+++ b/_posts/2019-11-01-12.md
@@ -5,6 +5,7 @@ date: 2019-11-01 08:00:00 +0200
 description: 
 img: 12.png
 tags: 
+spreaker: 22177739
 ---
 Zacznijmy serię o typach baz danych! Na pierwszy ogień key-value.
 
