--- a/_posts/2019-11-15-14.md
+++ b/_posts/2019-11-15-14.md
@@ -5,6 +5,7 @@ date: 2019-11-15 01:00:00 +0200
 description: 
 img: 14.png
 tags: 
+spreaker: 22582597
 ---
 Dziś trochę o narzędziach dla architekta. Będzie o MindMap, Event Storming, Eisenhower box, Pareto, MoSCoW, SWOT, C4!
 
