--- a/_posts/2019-12-06-15.md
+++ b/_posts/2019-12-06-15.md
@@ -4,7 +4,8 @@ title: '#15 Technology Radar vol. 21 Review'
 date: 2019-12-06 08:00:00 +0200
 description: 
 img: 15.png
-tags: 
+tags:
+spreaker: 22177737
 ---
 Szymon wrócił z urlopu i robimy przegląd Technology Radar vol. 21. 
 
