--- a/_posts/2019-12-20-17.md
+++ b/_posts/2019-12-20-17.md
@@ -5,6 +5,7 @@ date: 2019-12-20 08:00:00 +0200
 description: 
 img: 17.png
 tags: 
+spreaker: 22177700
 ---
 Odcinek o chyba mało popularnym typie baz — bazach grafowych.
 
