--- a/_posts/2020-01-31-21.md
+++ b/_posts/2020-01-31-21.md
@@ -5,6 +5,7 @@ date: 2020-01-31 08:00:00 +0200
 description: 
 img: 21.png
 tags: 
+spreaker: 22582755
 ---
 Kolejnym z filarów observability są metryki, na których skupimy się w tym odcinku. Jest to najbardziej potrzebny element do proaktywnego monitoringu i baza do tworzenia ulubionych przez wszystkich alertów ;-)
 
