--- a/_posts/2020-01-11-19.md
+++ b/_posts/2020-01-11-19.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '#19 API Gateway #2 - BFF, API Aggregation, GraphQL'
+title: '#19 API Gateway - BFF, API Aggregation, GraphQL'
 date: 2020-01-11 08:00:00 +0200
 mp3: https://anchor.fm/s/872010c/podcast/play/9629715/https%3A%2F%2Fd3ctxlq1ktw2nl.cloudfront.net%2Fproduction%2F2020-0-11%2F43029678-44100-1-59d0d07b5cbb9.mp3
 description: 
