--- a/_posts/2020-01-17-20.md
+++ b/_posts/2020-01-17-20.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '#20 Observability #1 - Logi'
+title: '#20 Observability - Logi'
 date: 2020-01-17 08:00:00 +0200
 description: 
 img: 20.png
