Dodanie opisu do #21 i #22

--- a/_posts/2020-02-14-22.md
+++ b/_posts/2020-02-14-22.md
@@ -2,7 +2,7 @@
 layout: post
 title: '#22 Observability - Distributed tracing'
 date: 2020-02-14 08:00:00 +0200
-description: 
+description: Distributed tracing, czyli jeden z trzech filar observability
 img: 22.png
 tags: 
 spreaker: 22745792
@@ -26,6 +26,6 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 - [AWS X-Ray](https://aws.amazon.com/xray/)
 - [Google Cloud Stackdriver Trace](https://cloud.google.com/trace)
 
-## Transkrypcja
+### Transkrypcja
 
 Będzie już niedługo!
