--- a/_posts/2020-01-31-21.md
+++ b/_posts/2020-01-31-21.md
@@ -2,7 +2,7 @@
 layout: post
 title: '#21 Observability - Metryki'
 date: 2020-01-31 08:00:00 +0200
-description: 
+description: Metryki, czyli miejsce w observability do proaktywnego monitoringu oraz alertów
 img: 21.png
 tags: 
 spreaker: 22582755
@@ -22,7 +22,7 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 - [Monitoring and Observability — What’s the Difference and Why Does It Matter?](https://thenewstack.io/monitoring-and-observability-whats-the-difference-and-why-does-it-matter/)
 - [Understanding Observability](https://sdarchitect.blog/2020/01/08/understanding-observability/)
 
-## Transkrypcja
+### Transkrypcja
 
 **Łukasz:** Cześć. Słuchacie Patoarchitektów. Prowadzą Łukasz Kałużny…
 
