--- a/_posts/2020-01-31-21.md
+++ b/_posts/2020-01-31-21.md
@@ -62,7 +62,7 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 **Ł:** A ja dla odmiany trochę mięcha i bebechów od Twojego. Post na temat tworzenia w Golangu, używania tak naprawdę, wbudowanej klasy HTTP serwera w sposób resilient, czyli wysoko, niezawodnie dostępny. I jest pokazane na temat podstaw, które trzeba pamiętać. Tu są dwie. Jeden to są „time-outy”, drugie…
 
-**S:** Condraker?
+**S:** Circuit breaker?
 
 **Ł:** Nie. context cancellation, bo to od strony implementacji serwera.
 
@@ -72,11 +72,11 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 **S:** Naprawdę całkiem nieźle i faktycznie jeszcze fajnie zwizualizowane. Niezły wpis. Dobrze, to o czym dziś?
 
-**Ł:** To wracamy do observability. Tym razem metryki. Szymon, przypomnijmy sobie, uporządkujmy to podejście. Powiedz nam te trzy kluczowe obszary observability.
+**Ł:** To wracamy do **observability**. Tym razem metryki. Szymon, przypomnijmy sobie, uporządkujmy to podejście. Powiedz nam te trzy kluczowe obszary **observability**.
 
-**S:** Logi, w poprzednim odcinku, metryki i na końcu mamy tracing.
+**S:** **Logi**, w poprzednim odcinku, **metryki** i na końcu mamy **tracing**.
 
-**Ł:** Mamy metryki. W dwóch zdaniach powiedz nam, czym jest metryka.
+**Ł:** Mamy **metryki**. W dwóch zdaniach powiedz nam, czym jest **metryka**.
 
 **S:** To jest akurat proste. Jest to para klucz-wartość, gdzie klucz jest stylingiem, a wartość jest liczbą. Tyle.
 
@@ -90,13 +90,13 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 **Ł:** Tutaj mówisz „agregujący i przetwarzający”. Czy to nie powinno być jedną całością? 
 
-**S:** Właśnie. Często jest tak, że metryki, które generujemy, to jest dużo danych. I w dużych systemach, gdzie je generujemy jest ich dość sporawo. Stawia się często po drodze, czy między naszym systemem te metryki generuje albo z którego zbieramy metryki, a bazą danych, która je przechowuje. Jest coś takiego co się nazywa Stacd. Pass aplikacja, która co robi? Zbiera te metryki, agreguje i w pewnym okienku czasowym je upraszcza, uśrednia, żeby jednak tych metryk wysyłanych do naszego serwera, który je przetwarza, żeby było ich mniej, bo po prostu byśmy sobie nie poradzili z tym volumenem danych. 
+**S:** Właśnie. Często jest tak, że metryki, które generujemy, to jest dużo danych. I w dużych systemach, gdzie je generujemy jest ich dość sporawo. Stawia się często po drodze, czy między naszym systemem te metryki generuje albo z którego zbieramy metryki, a bazą danych, która je przechowuje. Jest coś takiego co się nazywa **statsd**. Prosta aplikacja, która co robi? Zbiera te ***metryki**, **agreguje** i w pewnym okienku czasowym je upraszcza, uśrednia, żeby jednak tych metryk wysyłanych do naszego serwera, który je przetwarza, żeby było ich mniej, bo po prostu byśmy sobie nie poradzili z tym volumenem danych. 
 
-**Ł:** Można uprościć. Tak jest na przykładzie Stacd, czyli jest to klocek, który tak naprawdę robi za proxy, za bufor, przed wejściem.
+**Ł:** Można uprościć. Tak jest na przykładzie statsd, czyli jest to klocek, który tak naprawdę robi za proxy, za bufor, przed wejściem.
 
 **S:** Tak.
 
-**Ł:** Być może mieć kawałek logiki. A przetwarzający to już jest ta baza time-serious, która przechowuje metryki. 
+**Ł:** Być może mieć kawałek logiki. A przetwarzający to już jest ta **baza time series**, która przechowuje metryki. 
 
 **S:** Dokładnie tak.
 
@@ -110,9 +110,9 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 **Ł:** Dobrze. To zacznijmy sobie od tych typów pod spodem i od najprostszego, jaką jest metryka typu counter. 
 
-**S:** To brzmi jako najprostsza wartość. Aplikacja wysyła wartość dodatnią lub ujemną, dodatnia podbija niejako licznik, ujemna zmniejsza ten licznik. Oczywiście, time grain, czyli to czym jest Stacd, to jest ten obszar okienka, który będziemy upraszczali. Będziemy te metryki squashowali do jednej wartości. W tym momencie dajemy informację do naszego systemu, że w tym okienku należy zsumować te wartości. 
+**S:** To brzmi jako najprostsza wartość. Aplikacja wysyła wartość dodatnią lub ujemną, dodatnia podbija niejako licznik, ujemna zmniejsza ten licznik. Oczywiście, time grain, czyli to czym jest statsd, to jest ten obszar okienka, który będziemy upraszczali. Będziemy te metryki squashowali do jednej wartości. W tym momencie dajemy informację do naszego systemu, że w tym okienku należy zsumować te wartości. 
 
-**Ł:** Teraz bardzo ważne. Counter jest utrzymywany po stronie aplikacji, która wysyła, bo powiedziałeś, że zincrementowany bądź zmniejszany.
+**Ł:** Teraz bardzo ważne. **statsd** jest utrzymywany po stronie aplikacji, która wysyła, bo powiedziałeś, że zincrementowany bądź zmniejszany.
 
 **S:** Tak. Bo aplikacja de facto wysyła wartość, a tą sumę ogarniają systemy dalsze. Aplikacja nie musi się martwić, co się dzieje. De facto, aplikacja wysyła taką wartość relatywną, nie absolutną.
 
@@ -120,7 +120,7 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 **S:** Jasne. Przykładem, który ja widzę, to jest: patrzymy na stan elementów w magazynie. Systemy, które przyjmują rzeczy do magazynu zwiększają liczniki, systemy, które wydają albo monitorują cokolwiek, w tym momencie te liczniki zmniejszają. To są dwa osobne systemy. One nie mają dostępu do tego samego, ale dzięki temu , że podbijają albo zmniejszają tę samą metrykę, my mamy stan absolutny w danej sytuacji. To jest fajne. 
 
-**Ł:** To mamy podstawowo omówiony system jakim jest counter. Następny jest gauge.
+**Ł:** To mamy podstawowo omówiony system jakim jest counter. Następny jest **gauge**.
 
 **S:** Tu patrzymy trochę inaczej. Musimy bardziej spojrzeć na to, jak taka metryka jest odczytywana. W tym momencie ma ona większy sens. To jest metryka, której wartość jest równa ostatniej aktualnej wartości. Nieważne, czy to zaraportowanie wartości było 5 sekund temu czy 2 godziny temu. Po prostu patrzymy na ostatnią wartość. Przykład: liczba podów w cubermetresie. Praktycznie ta wartość się nie zmienia, póki nie zostanie niezaraportowana ta zmiana, czyli counter tu nie ma żadnego znaczenia. Wiemy, że jak 10 minut temu była taka sama wartość, to nic się nie zmieniło do tego czasu. Tu jest jedna uwaga: raportowanie metryki typu gauge wymaga znajomości stanu absolutnego systemu. Na przykład w cubermetrisie mamy kogo się zapytać i mamy tę informację.
 
@@ -136,9 +136,9 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 **S:** Tak. Summary jest taką obudówką wokół histogramu, bo dodaje konfigurowalne percentyle. Tak naprawdę mówimy, że okej, jak już słyszymy o percentylach to oczywiście nam się kojarzy z SLA, SLO itd. Bardzo słusznie. Mamy w SLA, SLO ustalone, że system ma odpowiadać w danym czasie w 95 przypadkach requestów. Summary właśnie nam to daje: czy jest w porządku czy trochę gorzej wyglądamy. To jest bardzo ważny wykres do monitorowania i wizualizacji. Jeżeli mamy jakikolwiek SLA albo my korzystamy z tego SLA, co jest ważne, albo my wystawiamy SLA.
 
-**Ł:** Czyli tak naprawdę dla nas SLO- Service Level Objective. Dobrze. Jak jesteśmy przy metrykach, przy tych detalach, jest jeszcze coś takiego jak gradacja z czasem rozdzielczości.
+**Ł:** Czyli tak naprawdę dla nas SLO - Service Level Objective. Dobrze. Jak jesteśmy przy metrykach, przy tych detalach, jest jeszcze coś takiego jak gradacja z czasem rozdzielczości.
 
-**S:** Tak. To się bardzo mocno wiąże z tym, co Stacd robi. Mianowicie, metryki jako takie to są klucz-wartość, większość systemów potrafi przyjmować dziesiątki tysięcy metryk na sekundę. Tych danych zaczyna się trochę robić. Następne pytanie to czy chcemy te wszystkie dane zbierać i kolejne to na ile ważne i na ile wartościowe są metryki sprzed roku w rozdzielczości co 100 milisekund. Mają raczej wątpliwą wartość. Więc większość systemów Influx umie to robić, Prometeusz nie. Umie metryki niejako degradować, jakość tych metryk, czyli zmniejsza ich rozdzielczość. Na przykład, w dniu dzisiejszym mamy co 100 milisekund, po tygodniu mamy co 500 milisekund, a po roku widzimy tę rozdzielczość w przedziale minuty. To bardzo oszczędza storage i przyspiesza zapytania.
+**S:** Tak. To się bardzo mocno wiąże z tym, co statsd robi. Mianowicie, metryki jako takie to są klucz-wartość, większość systemów potrafi przyjmować dziesiątki tysięcy metryk na sekundę. Tych danych zaczyna się trochę robić. Następne pytanie to czy chcemy te wszystkie dane zbierać i kolejne to na ile ważne i na ile wartościowe są metryki sprzed roku w rozdzielczości co 100 milisekund. Mają raczej wątpliwą wartość. Więc większość systemów Influx umie to robić, Prometheus nie. Umie metryki niejako degradować, jakość tych metryk, czyli zmniejsza ich rozdzielczość. Na przykład, w dniu dzisiejszym mamy co 100 milisekund, po tygodniu mamy co 500 milisekund, a po roku widzimy tę rozdzielczość w przedziale minuty. To bardzo oszczędza storage i przyspiesza zapytania.
 
 **Ł:** Ja się po roku akurat przyzwyczaiłem do dniowych albo tygodniowych, przy niektórych rzeczach capacity. 
 
@@ -164,7 +164,7 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 **S:** Tak.
 
-**Ł:** Dobrze. Co z circuit-breakerem? To jest metryka czy adnotacja, jeżeli zmieni się jego stan?
+**Ł:** Dobrze. Co z **circuit breakerem**? To jest **metryka** czy **adnotacja**, jeżeli zmieni się jego stan?
 
 **S:** To jest metryka. Zdecydowanie. 
 
@@ -172,11 +172,11 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 **S:** Czemu? Bo metryki są uproszczone, nie mają w tym momencie wszystkich operacji matematycznych, a przy circuit-breakerze mamy prosty myk. Metryka jest porównywana globalnie, na dany przedział czasowy, to jest adnotacja do czasu. Jeżeli mamy jednak parę instancji typu circuti-breaker’a to chcemy wiedzieć, gdzie się otwierały. I tego adnotacjami już byśmy nie zrobili. Dlatego metryka.
 
-**Ł:** Dobrze. Teraz pójdźmy do kolejnej, ciekawej rzeczy jaką w metrykach jest nie zawsze do końca złapana. Prometeusz dość dobrze to wymusza w pewnych miejscach – tagowanie metryk.
+**Ł:** Dobrze. Teraz pójdźmy do kolejnej, ciekawej rzeczy jaką w metrykach jest nie zawsze do końca złapana. Prometheus dość dobrze to wymusza w pewnych miejscach – tagowanie metryk.
 
-**S:** Wytłumaczę też, czemu to jest czasem niewymagane. Metryki historycznie idąc od Grafite’a nie miały tagów. Dopiero Influx i Prometeusz to wprowadził. Tagowanie – bardzo ważne. Te informacje wokół tego, z czego metryka wynika, czego dotyczy i jakiej grupy. Jest seria tagów, które po prostu muszą być. Środowisko, instancja, nazwa i rola tej metryki – generalnie, co ona właściwie pełni. Takie ogólne informacje, że jak ktoś spojrzy, to wie, gdzie to umieścić i co więcej, dorwać wszystkie metryki danej kategorii, środowiska itd. Znacząco poprawia widoczność. 
+**S:** Wytłumaczę też, czemu to jest czasem niewymagane. Metryki historycznie idąc od Grafite’a nie miały tagów. Dopiero Influx i Prometheus to wprowadził. Tagowanie – bardzo ważne. Te informacje wokół tego, z czego metryka wynika, czego dotyczy i jakiej grupy. Jest seria tagów, które po prostu muszą być. Środowisko, instancja, nazwa i rola tej metryki – generalnie, co ona właściwie pełni. Takie ogólne informacje, że jak ktoś spojrzy, to wie, gdzie to umieścić i co więcej, dorwać wszystkie metryki danej kategorii, środowiska itd. Znacząco poprawia widoczność. 
 
-**Ł:** To ja dorzucę od siebie jeszcze dobrą praktykę. Warto te same tagi trzymać przy logach. To potrafi dużo pomóc, jeżeli robimy analizę, tudzież ładnie tłumacząc na polski - śledztwo”, bo możemy zobaczyć i to ze sobą złączyć; co się działo, kiedy te logi występowały. W świecie Cloud Native teraz jak sobie popatrzymy na Prometeusza oraz nową zabawkę z tamtej rodziny, czyli Logiego do zbierania logów. One mają właśnie te metryki z pudełka, pozwalają na otagowanie tak samo metryk jak i logów, tymi samymi parametrami. 
+**Ł:** To ja dorzucę od siebie jeszcze dobrą praktykę. Warto te same tagi trzymać przy logach. To potrafi dużo pomóc, jeżeli robimy analizę, tudzież ładnie tłumacząc na polski - śledztwo”, bo możemy zobaczyć i to ze sobą złączyć; co się działo, kiedy te logi występowały. W świecie Cloud Native teraz jak sobie popatrzymy na Prometheusa oraz nową zabawkę z tamtej rodziny, czyli Logiego do zbierania logów. One mają właśnie te metryki z pudełka, pozwalają na otagowanie tak samo metryk jak i logów, tymi samymi parametrami. 
 
 **S:** To jest to, o czym mówiliśmy w poprzednim odcinku. To jest dodanie kontekstu do logów, co jest bardzo, bardzo ważne. Często rzeczy typu rozdzielenie środowisk w logach robi się przez inne indeksy Elastic Search’a. Ale tak jeżeli bierzemy logi? Jak najbardziej.
 
@@ -260,7 +260,7 @@ Ciekawe linki i inne znaleziska z tego odcinka:
 
 **S:** Co więcej, one powodują mniejszy próg wejścia, żeby ludzie zaczęli korzystać, szczególnie przy biznesowych. 
 
-**Ł:** Róbmy proste rzeczy, wzorujmy się na tym, co polecaliśmy np. RED, bo tam jest jeden dashboard dla każdej usługi, więc warto zobaczyć i wzorując się weź gotowe dashboardy dla jakiś rozwiązań typu MySQL, PostgREST, Kubernetes czy Prometeusz. Zobacz jak taki dashboard naprawdę fajnie wygląda i skopiuj go do swoich rzeczy, bo one dobrze pokazują, jak jest monitorowane takie rozwiązanie. 
+**Ł:** Róbmy proste rzeczy, wzorujmy się na tym, co polecaliśmy np. RED, bo tam jest jeden dashboard dla każdej usługi, więc warto zobaczyć i wzorując się weź gotowe dashboardy dla jakiś rozwiązań typu MySQL, Postgres, Kubernetes czy Prometheus. Zobacz jak taki dashboard naprawdę fajnie wygląda i skopiuj go do swoich rzeczy, bo one dobrze pokazują, jak jest monitorowane takie rozwiązanie. 
 **S:** Cieszę się, że to powiedziałeś, bo teraz dochodzimy do innego obszaru, który też staramy się mocno promować. To jest, żeby na jednym dashboardzie mieć wiele data source’ów. Dlaczego? Ponieważ mamy różne źródła prawdy. Przykład: możemy mieć raportowanie, ile nasza aplikacja przyjęła albo ile razy wołał się handler aplikacyjny. Drugi wykres mamy na tym samym dashboardzie, na przykład jak duża jest kolejka, ile razy było potwierdzeń, ile było wiadomości. Czyli weryfikujemy, że wartości, które powinny być takie same są czy nie są. Często te wartości nie będą takie same i nagle dowiemy się czegoś nowego, jak nasz system w ogóle działa. 
 
 **Ł:** Kolejna rzecz: metryki to nie audyt. Jest to dość istotne do zrozumienia, że metryki służą do zaobserwowania i monitorowania, a nie do audytowania.
